<resources>
    <string name="BGVersion">Version</string>
    <string name="_0000000">0000000</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_us">About Us</string>
    <string name="action_settings">Settings</string>
    <string name="add_new_device">Add New Device</string>
    <string name="add_user">Add New User</string>
    <string name="add_widget">Add widget</string>
    <string name="address">Address</string>
    <string name="admin">Admin</string>
    <string name="allow_camera">Please allow camera permission to use this function</string>
    <string name="android_link">Android: https://goo.gl/Giopvd</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_dont_have_permission">App dont have permission for this action</string>
    <string name="app_intro_back_button">BACK</string>
    <string name="app_intro_done_button">DONE</string>
    <string name="app_intro_next_button">NEXT</string>
    <string name="app_intro_skip_button">SKIP</string>
    <string name="app_name">PalGate</string>
    <string name="app_need_gps_permission">App need Location Permission</string>
    <string name="app_need_permission">App needs permission</string>
    <string name="app_settings">App Settings</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appwidget_text">3G Gate</string>
    <string name="are_u_sure_device_delete">Are you sure you want to delete %1$s? All active users will be removed</string>
    <string name="are_u_sure_device_remove_self">Are you sure you want to remove yourself from gate %1$s?</string>
    <string name="are_u_sure_device_remove_user">Are you sure you want to remove %1$s from gate %2$s?</string>
    <string name="assign_admin">Assign Admin</string>
    <string name="auto_open">Automatic Open</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="call_me">Call me</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="calling_app_fingerprint">F0:FD:6C:5B:41:0F:25:CB:25:C3:B5:33:46:C8:97:2F:AE:30:F8:EE:74:11:DF:91:04:80:AD:6B:2D:60:DB:83</string>
    <string name="calling_app_package_name">com.google.android.googlequicksearchbox</string>
    <string name="camera_permission_not_granted">Camera Permission Not Granted</string>
    <string name="car_app_library_version">1.4.0</string>
    <string name="change_image">Add / Change Image</string>
    <string name="changes_saved">Changes saved successfully</string>
    <string name="changes_saved_error">Some error occurred</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="check_one_toggle">Check at least one gate</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">Close</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">fa849d2605424ce79979056b159353f8</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="configure">Configure</string>
    <string name="connected">Connected</string>
    <string name="country">Country</string>
    <string name="country_name">Country name</string>
    <string name="crop_image_menu_crop">Crop</string>
    <string name="default_notification_channel_id">input_events_notifications</string>
    <string name="default_web_client_id">188981723956-dbhg9ujt2oj9uqk2kci3cu4nelv0q7c5.apps.googleusercontent.com</string>
    <string name="delete_gate">Delete Gate</string>
    <string name="delete_my_account">Delete My Account</string>
    <string name="delete_user">Delete User</string>
    <string name="deleting_your_account">DELETING YOUR ACCOUNT:</string>
    <string name="device_added">Device Added</string>
    <string name="device_deleted">Device deleted</string>
    <string name="device_name">Device name</string>
    <string name="device_removed">Device Removed</string>
    <string name="dial_to_open">Dial To Open</string>
    <string name="didnt_received_call">"Didn't receive a code?"</string>
    <string name="disconnected">Disconnected</string>
    <string name="do_u_want_to_send_sms">Do you want to send an invitation SMS to</string>
    <string name="done">Done</string>
    <string name="edit_gate_color_and_icon">Edit gate color and icon</string>
    <string name="edit_image">Edit image</string>
    <string name="edit_user">Edit User</string>
    <string name="enter_gate_code">Enter Gate Code</string>
    <string name="enter_gate_name">Type gate name here</string>
    <string name="enter_gate_sn">Enter Gate S/N</string>
    <string name="enter_phone">Please enter your phone number below to get started</string>
    <string name="enter_valid_gate_name">Please enter valid gate name</string>
    <string name="enter_valid_phone">Please enter a valid phone number</string>
    <string name="errorCodeLabel">Error Code</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="face_detected">Face detected</string>
    <string name="face_detected_not_in_circle">Face detected not in circle</string>
    <string name="face_detected_other_reason">Other reason</string>
    <string name="face_not_detected">face not detected</string>
    <string name="face_text">Face recognition</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="fingerprintLabel">Sender App Fingerprint</string>
    <string name="firebase_database_url">https://palgate-27dc5.firebaseio.com</string>
    <string name="gate_1">Gate 1</string>
    <string name="gate_2">Gate 2</string>
    <string name="gate_color">Gate color</string>
    <string name="gate_icon">Gate icon</string>
    <string name="gate_id">Gate Id</string>
    <string name="gate_name">Gate Name</string>
    <string name="gate_opened">Gate opened</string>
    <string name="gate_options">Gate Options</string>
    <string name="gcm_defaultSenderId">188981723956</string>
    <string name="gcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to send downstream messages to this app.</string>
    <string name="history">History</string>
    <string name="manager_menu">Manager menu</string>
    <string name="normal">Normal</string>
    <string name="normally_closed">Normally Closed</string>
    <string name="normally_open">Normally Open</string>
    <string name="option1">RESULT_OK empty Auth_Code</string>
    <string name="option2">RESULT_OK with Auth_Code</string>
    <string name="option3">RESULT_CANCELLED</string>
    <string name="option4">Recoverable Error with Code</string>
    <string name="option5">Unrecoverable - User Not Consent</string>
    <string name="option6">Unrecoverable Error with Code</string>
    <string name="option7">Invalid Request with Code</string>
    <string name="pkgSenderName">Sender App Package Name</string>
    <string name="relay_mode">Relay Mode</string>
    <string name="selectResponseText">Select Response</string>
    <string name="submitButton">Send</string>
    <string name="users">Users</string>
    <string name="warning">Warning</string>
    <string name="widget_image">widget_image</string>
    <string name="wifi_connect">Connect to WiFi</string>
</resources>