<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:app="http://schemas.android.com/apk/res-auto">
        <TextView android:textSize="18.0sp" android:id="@id/titleText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/app_name" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:id="@id/packageNameLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/pkgSenderName" android:layout_marginStart="24.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/titleText" />
        <TextView android:id="@id/fingerprintLabel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/fingerprintLabel" android:layout_marginStart="24.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/packageNameTextView" />
        <TextView android:id="@id/selectResponseText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/selectResponseText" android:layout_marginStart="24.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/fingerprintTextView" />
        <RadioGroup android:id="@id/radioGroup" android:layout_width="wrap_content" android:layout_height="223.0dip" android:layout_marginTop="8.0dip" android:layout_marginStart="8.0dip" app:layout_constraintStart_toStartOf="@id/selectResponseText" app:layout_constraintTop_toBottomOf="@id/selectResponseText">
            <RadioButton android:id="@id/resultOkEmptyCodeRadioButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/option1" android:layout_weight="1.0" />
            <RadioButton android:id="@id/resultOkWithCodeRadioButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/option2" android:layout_weight="1.0" />
            <RadioButton android:id="@id/resultCancelledRadioButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/option3" android:layout_weight="1.0" />
            <RadioButton android:id="@id/errorRecoverableRadioButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/option4" android:layout_weight="1.0" />
            <RadioButton android:id="@id/errorUserNotConsentRadioButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/option5" android:layout_weight="1.0" />
            <RadioButton android:id="@id/errorUnrecoverableWithCodeRadioButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/option6" android:layout_weight="1.0" />
            <RadioButton android:id="@id/invalidRequestRadioButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/option7" android:layout_weight="1.0" />
        </RadioGroup>
        <TextView android:textSize="14.0sp" android:id="@id/errorCodeLabel" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/errorCodeLabel" app:layout_constraintBottom_toTopOf="@id/errorCodeEditText" app:layout_constraintStart_toStartOf="@id/errorCodeEditText" />
        <EditText android:enabled="false" android:textSize="14.0sp" android:id="@id/errorCodeEditText" android:visibility="invisible" android:layout_width="51.0dip" android:layout_height="43.0dip" android:ems="10" android:inputType="numberSigned" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="@id/radioGroup" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/radioGroup" app:layout_constraintTop_toTopOf="@id/radioGroup" />
        <Button android:id="@id/submitButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/submitButton" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/radioGroup" />
        <TextView android:textSize="12.0sp" android:id="@id/logTextView" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:layout_marginStart="24.0dip" android:layout_marginEnd="24.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/submitButton" />
        <TextView android:textSize="14.0sp" android:textColor="#ff2196f3" android:id="@id/packageNameTextView" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/calling_app_package_name" android:layout_marginStart="32.0dip" android:layout_marginEnd="24.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/packageNameLabel" />
        <TextView android:textSize="14.0sp" android:textColor="#ff2196f3" android:id="@id/fingerprintTextView" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/calling_app_fingerprint" android:layout_marginStart="32.0dip" android:layout_marginEnd="24.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/fingerprintLabel" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
