<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/managerOptionsRootCl" android:background="@color/dark_grey" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:id="@id/managerOptionsSv" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/managerOptionsMainCl" android:background="@color/dark_grey" android:paddingTop="16.0dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/managerOptionsUsersCl" android:background="@drawable/rounded_users_item" android:padding="8.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
                <TextView android:textSize="@dimen/options_text_size" android:textColor="@color/white" android:gravity="left" android:id="@id/users" android:padding="@dimen/default_padding" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/users" android:textDirection="ltr" app:layout_constraintEnd_toStartOf="@id/rightArrowUsers" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/managerOptionsUsersIv" app:layout_constraintTop_toTopOf="parent" />
                <ImageView android:id="@id/rightArrowUsers" android:layout_width="40.0dip" android:layout_height="40.0dip" android:src="@drawable/baseline_keyboard_arrow_right_24" app:layout_constraintBottom_toBottomOf="@id/users" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/users" app:layout_constraintTop_toTopOf="@id/users" />
                <ImageView android:id="@id/managerOptionsUsersIv" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="@id/users" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/users" app:srcCompat="@drawable/ic_baseline_group_24" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/gateOptionsConnectWiFiCl" android:background="@drawable/rounded_users_item" android:padding="8.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/managerOptionsUsersCl">
                <TextView android:textSize="@dimen/options_text_size" android:textColor="@color/white" android:gravity="left" android:id="@id/gateOptionsConnectWiFiTitleTv" android:padding="@dimen/default_padding" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/wifi_connect" android:textDirection="ltr" app:layout_constraintEnd_toStartOf="@id/gateOptionsConnectWifiArrow" app:layout_constraintStart_toEndOf="@id/gateOptionsConnectWiFiIv" app:layout_constraintTop_toTopOf="parent" />
                <ImageView android:id="@id/gateOptionsConnectWiFiIv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/baseline_wifi_24" app:layout_constraintBottom_toBottomOf="@id/gateOptionsConnectWiFiTitleTv" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/gateOptionsConnectWiFiTitleTv" />
                <ImageView android:id="@id/gateOptionsConnectWifiArrow" android:layout_width="40.0dip" android:layout_height="40.0dip" android:src="@drawable/baseline_keyboard_arrow_right_24" android:layout_centerVertical="true" android:contentDescription="@string/manager_menu" android:layout_alignParentEnd="true" app:layout_constraintBottom_toBottomOf="@id/gateOptionsConnectWiFiTitleTv" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/gateOptionsConnectWiFiTitleTv" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/managerOptionsHistoryCl" android:background="@drawable/rounded_users_item" android:padding="8.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/gateOptionsConnectWiFiCl">
                <TextView android:textSize="@dimen/options_text_size" android:textColor="@color/white" android:id="@id/history" android:padding="@dimen/default_padding" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/history" android:textDirection="ltr" app:layout_constraintEnd_toStartOf="@id/rightArrowHistory" app:layout_constraintStart_toEndOf="@id/managerOptionsHistoryIv" app:layout_constraintTop_toTopOf="parent" />
                <ImageView android:id="@id/rightArrowHistory" android:layout_width="40.0dip" android:layout_height="40.0dip" android:src="@drawable/baseline_keyboard_arrow_right_24" app:layout_constraintBottom_toBottomOf="@id/history" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/history" />
                <ImageView android:id="@id/managerOptionsHistoryIv" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="@id/history" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/history" app:srcCompat="@drawable/ic_baseline_history_24" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/managerOptionsRelayCl" android:background="@drawable/rounded_users_item" android:padding="8.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/managerOptionsHistoryCl">
                <TextView android:textSize="@dimen/options_text_size" android:textColor="@color/white" android:id="@id/relayMode" android:padding="@dimen/default_padding" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/relay_mode" android:textDirection="ltr" android:textAlignment="center" app:layout_constraintStart_toEndOf="@id/managerOptionsRelayIv" app:layout_constraintTop_toTopOf="parent" />
                <ImageView android:id="@id/managerOptionsRelayIv" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="@id/relayMode" app:layout_constraintEnd_toStartOf="@id/relayMode" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/relayMode" app:srcCompat="@drawable/ic_baseline_input_24" />
                <com.google.android.material.chip.ChipGroup android:id="@id/relayChipGroup" android:layout_width="0.0dip" android:layout_height="fill_parent" app:chipSpacing="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/managerOptionsRelayIv" app:layout_constraintTop_toBottomOf="@id/relayMode" app:selectionRequired="true" app:singleLine="false" app:singleSelection="true">
                    <com.google.android.material.chip.Chip android:textColor="@color/white" android:id="@id/chipNormallyOpen" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/normally_open" android:checkable="true" app:checkedIconEnabled="false" app:chipBackgroundColor="@color/chip_color" app:chipEndPadding="16.0dip" app:chipIcon="@drawable/ic_baseline_lock_open_24" app:chipIconVisible="true" app:chipStartPadding="16.0dip" app:closeIconEnabled="false" app:closeIconVisible="false" app:textEndPadding="16.0dip" app:textStartPadding="16.0dip" />
                    <com.google.android.material.chip.Chip android:textColor="@color/white" android:id="@id/chipNormal" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/normal" android:checkable="true" app:checkedIconEnabled="false" app:chipBackgroundColor="@color/chip_color" app:chipEndPadding="16.0dip" app:chipIconVisible="true" app:chipStartPadding="16.0dip" app:closeIconEnabled="false" app:closeIconVisible="false" app:textEndPadding="16.0dip" app:textStartPadding="16.0dip" />
                    <com.google.android.material.chip.Chip android:textColor="@color/white" android:id="@id/chipNormallyClosed" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/normally_closed" android:checkable="true" app:checkedIconEnabled="false" app:chipBackgroundColor="@color/chip_color" app:chipEndPadding="16.0dip" app:chipIcon="@drawable/ic_outline_lock_24" app:chipIconVisible="true" app:chipStartPadding="16.0dip" app:closeIconEnabled="false" app:closeIconVisible="false" app:textEndPadding="16.0dip" app:textStartPadding="16.0dip" />
                </com.google.android.material.chip.ChipGroup>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/managerOptionsValidUntilCl" android:background="@drawable/rounded_users_item" android:padding="8.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/managerOptionsRelayCl">
                <TextView android:textSize="@dimen/options_text_size" android:textColor="#ffffffff" android:id="@id/validUntilText" android:padding="@dimen/default_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Days Left" android:textDirection="ltr" app:layout_constraintStart_toEndOf="@id/managerOptionsSimValidIv" app:layout_constraintTop_toTopOf="parent" />
                <TextView android:textSize="18.0sp" android:textColor="@color/white" android:id="@id/validUntilNumber" android:padding="@dimen/default_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="999" app:layout_constraintBottom_toBottomOf="@id/validUntilText" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/validUntilText" />
                <ImageView android:id="@id/managerOptionsSimValidIv" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="@id/validUntilText" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/validUntilText" app:srcCompat="@drawable/ic_baseline_calendar_today_24" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/managerOptionsDeleteDeviceCl" android:background="@drawable/rounded_users_item" android:padding="8.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/managerOptionsValidUntilCl">
                <TextView android:textSize="@dimen/options_text_size" android:textColor="#ffe10f57" android:id="@id/deleteGate" android:padding="@dimen/default_padding" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/delete_gate" android:textDirection="ltr" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/managerOptionsDeleteIv" app:layout_constraintTop_toTopOf="parent" />
                <ImageView android:id="@id/managerOptionsDeleteIv" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="@id/deleteGate" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/deleteGate" app:srcCompat="@drawable/ic_baseline_delete_24" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
